HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordFieldInitMissing/Source/Main.uv
//! Rejected record construction specimen for a missing field initializer.

public record MissingFieldPayload {
    public first: i32
    public second: i32
}

public procedure recordFieldInitMissingReference() -> MissingFieldPayload {
    return MissingFieldPayload {
        first: 1
    }
}
